[package]
name = "openbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
anyhow.workspace = true
async-once-cell.workspace = true
async-trait.workspace = true
backon.workspace = true
fixed.workspace = true
itertools.workspace = true
openbook-v2.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
spl-associated-token-account.workspace = true
tokio.workspace = true
tracing.workspace = true
